Fixed image styling bugs

--- a/styles/style.css
+++ b/styles/style.css
@@ -28,19 +28,36 @@ body{
     width: 80vw;
     overflow: hidden;
     font-size: 0.8rem;
+    
 
     padding: 2rem;
 }
 
 .omelette{
+    /* display: flex; */
+
+    text-align: center;
+    /* justify-content: space-between; */
+    /* align-items: center; */
+    /* border: 1px solid hsl(30, 10%, 34%); */
+    /* padding-left: auto; */
+    /* padding-right: auto; */
     border-radius: 1rem;
     overflow: hidden;
     /* padding-bottom: 1rem; */
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 1.5rem;
-    max-width: 60%;
-    position: relative;
-    object-fit: fill;
+    max-height: 400px;
+    max-width: 600px;
+    /* width: 75%; */
+}
+
+
+.omelette img{
+    width: 100%;
+    height: auto;
+    display: block;
 }
 
 .mainHeader{
@@ -103,26 +120,26 @@ ol li{
     margin-left: 1rem;
 }
 
-.table-container{
-    max-width: 100%;
+table{
+    width: 100%;
     /* padding-right: 1rem; */
 }
 
 td{
-    padding: 0.5rem 5rem;
+    padding: 0.5rem 1rem;
     border-bottom: 1px solid hsl(30, 18%, 87%);
     text-align: left;
-    max-width: 50%;
+    /* max-width: 50%; */
 }
 
 td:first-child{
     text-align: left;
-    max-width: 100%;
+    /* max-width: 100%; */
 }
 
 td:last-child{
-    text-align: right;
-    max-width: 100%;
+    text-align: left;
+    /* max-width: 100%; */
     font-weight: bold;
     color: hsl(14, 45%, 36%);
 }
